#ifndef __DATE_H
#define __DATE_H

struct Date {
    int hour;
    int minute;
    int second;
    int year;
    int month;
    int day;
};

#endif
